# RoadAccidentAnalysis

./: .gitignore  README.md
backend/: LoadingDB.py  convertcsv.geojson  docker-compose.yml  main.py  populate_db.py  pyproject.toml  result.geojson
backend/computations/: compute_corr.ipynb
backend/src/: filtering.py  heatmap.py  utils.py
backend/src/models/: accident.py
visualization/: package-lock.json  package.json
visualization/public/: index.html
visualization/src/: App.js  index.css  index.js
visualization/src/components/: CorrelationButton.jsx  CorrelationPlot.jsx  FilteringOptions.jsx  Heatmap.jsx  Legend.jsx
visualization/src/mock/: mockData.js
