[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["VikVelev <viktorvelev8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
pandas = "^1.3.5"
psycopg2 = "^2.9.3"
peewee = "^3.14.8"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"